syntax = "proto3";

package GrpcClasses.Match;

service Matches {
  rpc findById(MatchIdRequest) returns (MatchModel);
  rpc updateMatch (MatchModel) returns (Empty);
  rpc deleteMatch (MatchIdRequest) returns (Empty);
  rpc findByUserId (UserIdRequest) returns (stream MatchModel);
  rpc createMatch (MatchModel) returns (Empty);
}

message MatchModel {
  int32 id = 1;
  int32 userId1 = 2;
  string matchUser1 = 3;
  int32 userId2 = 4;
  string matchUser2 = 5;
  string match = 6;
}

message MatchIdRequest {
  int32 id = 1;
}

message UserIdRequest {
  int32 userId = 1;
}

message MatchResult {
  string match = 1;
}

message UserModel {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string first_name = 5;
  string last_name = 6;
  string birthday = 7;
  string description = 8;
  int32 number_of_matches = 9;
  string note = 10;
  string photo1 = 11;
  string photo2 = 12;
  string photo3 = 13;
  string photo4 = 14;
  string photo5 = 15;
  string gender = 16;
  string preference = 17;
  string horoscope = 18;
  string occupation = 19;
  string city = 20;
  string education = 21;
  bool drink = 22;
  bool administrator = 23;
}

message Empty {

}